samples/_failures_safe/1761072593_943e21_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e9d4d9dd.c: In function ‘main’:
./samples/SAFE/__tmp_e9d4d9dd.c:147:16: error: expected ‘;’ at end of input
  147 |     init_matrix
      |                ^
      |                ;
./samples/SAFE/__tmp_e9d4d9dd.c:147:5: error: expected declaration or statement at end of input
  147 |     init_matrix
      |     ^~~~~~~~~~~
